# agenyz-elt

./: .gitignore  Dockerfile  Makefile  README.md  constants.py  k8s.py  meltano.yml  prefect_register.py  pyproject.toml  requirements.txt  tasks.py  update_flow.py
scripts/: aliases.sh
transform/: dbt_project.yml
transform/models/: source.yml
transform/models/staging/: stg__chatwoot_conversations.sql
transform/profiles/postgres/: profiles.yml
